--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* Reset básico */
 html, body {
     height: 100%;
     margin: 0;
@@ -7,17 +8,45 @@ html, body {
 body {
     font-family: fantasy;
     font-size: 18px;
+    background-color: #f4f4f4; 
 }
+
 
 .hidden {
     display: none;
 }
 
+#main-header {
+    background-color: #e0e0e0; 
+    padding: 20px 0;
+    text-align: center;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+#header {
+    font-size: 1.8rem;
+    font-family: 'Agu Display', sans-serif;
+    color: #333;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 8px;
+    display: inline-block;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
 @media screen and (min-width: 768px) {
-    
-   
+    #header {
+        font-size: 2rem;
+        padding: 15px 30px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
-   
+    #header {
+        font-size: 2.2rem;
+        padding: 20px 40px;
+    }
 }
