--- a/css/main.css
+++ b/css/main.css
@@ -37,11 +37,36 @@ body {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+#footer-nav {
+    font-size: 0.5rem;
+    font-family: 'Agu Display', sans-serif;
+    color: #333;
+    letter-spacing: 2px;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 8px;
+    display: inline-block;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
 @media screen and (min-width: 768px) {
     #header {
         font-size: 2rem;
         padding: 15px 30px;
     }
+
+    #footer-nav {
+        font-size: 1.0rem;
+        font-family: 'Agu Display', sans-serif;
+        color: #333;
+        letter-spacing: 2px;
+        font-weight: bold;
+        padding: 5px 10px;
+        border-radius: 8px;
+        display: inline-block;
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    
 }
 
 @media screen and (min-width: 1200px) {
@@ -49,4 +74,17 @@ body {
         font-size: 2.2rem;
         padding: 20px 40px;
     }
+
+    #footer-nav {
+        font-size: 1.0rem;
+        font-family: 'Agu Display', sans-serif;
+        color: #333;
+        letter-spacing: 2px;
+        font-weight: bold;
+        padding: 5px 10px;
+        border-radius: 8px;
+        display: inline-block;
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    
 }
