--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,27 @@ body {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+#gallery {
+    display: grid;
+    gap: 20px;
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#gallery div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 10px;
+    background: white;
+    padding: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0,0 , 0.1);
+}
+
+
+
 #footer-nav {
     font-size: 0.5rem;
     font-family: 'Agu Display', sans-serif;
