--- a/css/main.css
+++ b/css/main.css
@@ -51,12 +51,16 @@ body {
     align-items: center;
     overflow: hidden;
     border-radius: 10px;
-    background: white;
+    border: 3px dashed black;
     padding: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0,0 , 0.1);
 }
 
-
+#gallery img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 
 #footer-nav {
     font-size: 0.5rem;
